--- a/menu/templates/menu/includes/food-menu.html
+++ b/menu/templates/menu/includes/food-menu.html
@@ -1,5 +1,6 @@
-<div class="horizontal-scroll-food-menu text-center shadow">
+<div class="horizontal-scroll-food-menu shadow d-md-flex justify-content-md-center">
     {% for category in menu_categories %}<a class="nav-link {{category.name|lower}}"
         href="{% url 'menu' %}?category={{category.name|lower}}" aria-label="Food menu for
         {{category.friendly_name}}">{{category.friendly_name}}</a>{% endfor %}
 </div>
+
