--- a/menu/templates/menu/menu-all.html
+++ b/menu/templates/menu/menu-all.html
@@ -31,11 +31,17 @@
                     </button>
                     <ul class="dropdown-menu bg-white" aria-labelledby="sorting-dropdown">
                         <li><a href="{% url 'menu' %}?sort=price&direction=asc" class="dropdown-item"
-                                aria-label="Sort food items by price">By
-                                Price</a></li>
+                                aria-label="Sort food items by price low to high">Price (low to high)</a></li>
+                        <li><a href="{% url 'menu' %}?sort=price&direction=desc" class="dropdown-item"
+                                aria-label="Sort food items by price high to low">price (high to low)</a></li>
+                        <li><a href="{% url 'menu' %}?sort=rating&direction=asc" class="dropdown-item"
+                                aria-label="Sort food items by rating low to high">Rating (low to high)</a></li>
                         <li><a href="{% url 'menu' %}?sort=rating&direction=desc" class="dropdown-item"
-                                aria-label="Sort food items by rating">By
-                                Rating</a></li>
+                                aria-label="Sort food items by rating high to low">Rating (high to low)</a></li>
+                        <li><a href="{% url 'menu' %}?sort=name&direction=asc" class="dropdown-item"
+                                aria-label="Sort food items by name from A to Z">Name (A-Z)</a></li>
+                        <li><a href="{% url 'menu' %}?sort=name&direction=desc" class="dropdown-item"
+                                aria-label="Sort food items by name from Z to A">Name (Z-A)</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +53,7 @@
             <div class="row">
                 {% for food in menu_items %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 card-container">
-                    <div class="card border-0">
+                    <div class="card h-100 border-0">
                         {% if food.image %}
                         <a href="{% url 'item_details' food.name food.id %}">
                             <img class="card-img-top img-fluid" src="{{ food.image.url }}" alt="{{ food.name }}">
