--- a/menu/static/menu/css/menu.css
+++ b/menu/static/menu/css/menu.css
@@ -35,3 +35,26 @@
     z-index: 1;
 }
 
+.back-to-top-btn {
+    position: fixed;
+    top: 50%;
+    left: 0%;
+    z-index: 3;
+    background-color: var(--yellow-orange-color-wheel);
+    border: 2px outset var(--onyx);
+    border-radius: 50%;
+    opacity: 0.75;
+    cursor: pointer;
+}
+
+.back-to-top-btn:hover {
+    opacity: 1;
+    transition: all 0.3s ease-in-out;
+}
+
+@media screen and (min-width: 768px) {
+    .back-to-top-btn {
+        top: 80%;
+        left: 80%;
+    }
+}
