Added context processor for cart contents and calculating delivery cost

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -27,5 +27,10 @@
             {% endif %}
         </div>
     </div>
+    <div class="row h-25">
+        <div class="col text-white">
+            {{minimum_delivery_cost}}
+        </div>
+    </div>
 </div>
 {% endblock content %}
