--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% block content%}
 {% comment %} Footer {% endcomment %}
+<div class="container-fluid mt-auto footer-wrapper">
 <footer class="container mt-auto py-5">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
@@ -20,10 +21,6 @@
                         <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
                             aria-label="Click here to go to our Twitter page"><i class="fa-brands fa-twitter"></i></a>
                     </li>
-                    <li class="mx-1">
-                        <a href="tel://0209126583" class="text-decoration-none mx-2" target="_blank" rel="noopener"
-                            aria-label="Click here to give us a call"><i class="fa-solid fa-phone"></i></a>
-                    </li>
                 </ul>
             </div>
             <p class="text-justify"><strong>FineChop</strong> has the pleasure of serving popular and authentic Asian
@@ -33,7 +30,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mt-4">
             <h1 class="fs-4">Support</h1>
             <ul>
-                <li><a class="text-decoration-none" href="tel://0209126583" target="_blank" rel="noopener"
+                <li><a class="text-decoration-none" href="tel:0209126583" target="_blank" rel="noopener"
                         aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mr-2"></i>
                         020-912-6583</a>
                 </li>
@@ -43,20 +40,19 @@
                         email
                         here</a>
                 </li>
-
+                <li><a class="text-decoration-none mx-4" href="#" target="_blank" rel="noopener"
+                        aria-label="Click here to view methods of contacting us">Contact Us</a>
+                </li>
             </ul>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 my-5">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 mb-5">
             <h1 class="fs-4">Info</h1>
             <ul class="mt-3">
                 <li><a class="text-decoration-none" href="{% url 'about' %}" target="_blank" rel="noopener"
                         aria-label="Click here to discover how we built this business in the about section">About
                         Us</a>
                 </li>
-                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
-                        aria-label="Click here to view methods of contacting us">Contact Us</a>
-                </li>
-                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                <li><a class="text-decoration-none" href="{% url 'menu' %}" target="_blank" rel="noopener"
                         aria-label="Click here to view our menu">Menu</a>
                 </li>
                 <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
@@ -72,9 +68,9 @@
                         </strong></p>
                 </li>
             </ul>
-
-
         </div>
     </div>
 </footer>
+</div>
+
 {% endblock %}
