--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="about-dropdown">
                             <li>
-                                <a class="dropdown-item" href="#!">Call Now</a>
+                                <a class="dropdown-item" href="tel:0209126583">Call Now</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#!">Careers</a>
@@ -106,8 +106,14 @@
                     </div>
                 </li>
                 <li class="nav-link mx-1">
-                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-
+                    <a href="{% url 'view_cart' %}" aria-label="Click the cart icon to view whats in the cart for orders"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <p class="text-white">
+                        {% if grand_total %}
+                        €{{ grand_total|floatformat:2 }}
+                        {% else %}
+                        €0.00
+                        {% endif %}
+                    </p>
                 </li>
             </ul>
             <ul class="mx-auto navbar-nav nav-social d-sm-flex d-lg-none flex-row">
@@ -124,7 +130,7 @@
                         aria-label="Click here to go to our Twitter page"><i class="fa-brands fa-twitter"></i></a>
                 </li>
                 <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Call Now">
-                    <a href="tel://0209126583" class="text-decoration-none" target="_blank" rel="noopener"
+                    <a href="tel:0209126583" class="text-decoration-none" target="_blank" rel="noopener"
                         aria-label="Click here to give us a call"><i class="fa-solid fa-phone"></i></a>
                 </li>
             </ul>
