--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -6,37 +6,62 @@
 <link rel="stylesheet" href="{% static 'menu/css/menu.css' %}">{% endblock extra_css %}
 {% block head_title %}Menu - {{menu_item.name}}{% endblock head_title %}
 {% block content %}
-<div class="menu-spacer">
+<div class="menu-spacer py-2">
     {% comment %} provides spacing for the fixed food menu and containers {% endcomment%}
 </div>
 {% include 'menu/includes/food-menu.html' %}
 <div class="container-fluid food-menu bg-white">
     <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
-                <div class="image-container my-5">
-                    {% if menu_item.image %}
-                    <a href="{{ menu_item.image.url }}" target="_blank">
-                        <img class="card-img-top img-fluid rounded shadow" src="{{ menu_item.image.url }}" alt="{{ menu_item.name }}">
-                    </a>
-                    {% else %}
-                    <a href="">
-                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ menu_item.name }}">
-                    </a>
-                    {% endif %}
-                </div>
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
+            <div class="image-container my-5">
+                {% if menu_item.image %}
+                <a href="{{ menu_item.image.url }}" target="_blank">
+                    <img class="card-img-top img-fluid rounded shadow" src="{{ menu_item.image.url }}"
+                        alt="{{ menu_item.name }}" style="max-height: 500px">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ menu_item.name }}">
+                </a>
+                {% endif %}
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="mb-5 mt-md-5">
-                    <p class="mb-0">{{ menu_item.name }}</p>
-                    <p class="lead fs-3 mb-0 text-left font-weight-bold">€{{menu_item.price }}</p>
-                    {% if menu_item.rating %}
-                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ menu_item.rating }} / 5</small>
-                    {% else %}
-                    <small class="text-muted">No Rating</small>
-                    {% endif %}
-                    <p class="mt-3">{{ menu_item.description }}</p>
-                </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="mb-5 mt-md-5">
+                <p class="mb-0">{{ menu_item.name }}</p>
+                <p class="lead fs-3 mb-0 text-left font-weight-bold">€{{menu_item.price }}</p>
+                {% if menu_item.rating %}
+                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ menu_item.rating }} / 5</small>
+                {% else %}
+                <small class="text-muted">No Rating</small>
+                {% endif %}
+                <p class="mt-3">{{ menu_item.description }}</p>
+                <form class="form" action="{% url 'add_to_cart' menu_item.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="20" data-item_id="{{ menu_item.id }}" id="id_qty_{{ menu_item.id }}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <a href="{% url 'menu' %}" class="btn btn-outline-dark  shadow mt-5">
+                                <i class="fas fa-chevron-left"></i>
+                                <span class="text-uppercase">Add more Food</span>
+                            </a>
+                            <button type="submit" class="btn btn-orange text-white shadow border text-uppercase mt-5 p-3"
+                                value="Add to Cart">Add to Cart<i class="fas fa-chevron-right"></i></button>
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
             </div>
+        </div>
     </div>
 </div>
 {% endblock content %}
