Remove image size limit for menu item detail template

--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -16,7 +16,7 @@
                 {% if menu_item.image %}
                 <a href="{{ menu_item.image.url }}" target="_blank">
                     <img class="card-img-top img-fluid rounded shadow" src="{{ menu_item.image.url }}"
-                        alt="{{ menu_item.name }}" style="max-height: 500px">
+                        alt="{{ menu_item.name }}">
                 </a>
                 {% else %}
                 <a href="">
