--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -107,8 +107,8 @@
                 </li>
                 <li class="nav-link mx-1">
                     <a href="{% url 'view_cart' %}" aria-label="Click the cart icon to view whats in the cart for orders"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <p class="text-white">
-                        {% if grand_total %}
+                    <p class="text-white position-absolute">
+                        {% if grand_total > 0 %}
                         €{{ grand_total|floatformat:2 }}
                         {% else %}
                         €0.00
