--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -38,6 +38,16 @@
                 <form class="form" action="{% url 'add_to_cart' menu_item.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
+                            {% with menu_item.portion_sizes as s %}
+                            {% if s %}
+                            <div class="col-12">
+                                <p><strong>Portion:</strong></p>
+                                <select class="form-control rounded-0 w-50" name="portion_size" id='id_portion_size'>
+                                    <option value="i">Individual</option>
+                                    <option value="m" selected>Meal (side & drink + €5)</option>
+                                </select>
+                            </div>
+                            {% endif %}
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
@@ -57,6 +67,7 @@
                                 value="Add to Cart">Add to Cart<i class="fas fa-chevron-right"></i></button>
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    {% endwith %}
                     </div>
                 </form>
             </div>
