--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -38,22 +38,39 @@
                 <form class="form" action="{% url 'add_to_cart' menu_item.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                            {% with menu_item.portion_sizes as s %}
-                            {% if s %}
-                            <div class="col-12">
-                                <p><strong>Portion:</strong></p>
-                                <select class="form-control rounded-0 w-50" name="portion_size" id='id_portion_size'>
-                                    <option value="i">Individual</option>
-                                    <option value="m" selected>Meal (side & drink + €5)</option>
-                                </select>
-                            </div>
-                            {% endif %}
+                        {% with menu_item.portion_sizes as s %}
+                        {% if s %}
+                        <div class="col-12">
+                            <p><strong>Portion:</strong></p>
+                            <select class="form-control rounded-0 w-50" name="portion_size" id='id_portion_size'>
+                                <option value="i">Individual</option>
+                                <option value="m" selected>Meal (side & drink + €5)</option>
+                            </select>
+                        </div>
+                        {% endif %}
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-orange text-white rounded-0"
+                                            data-item_id="{{ menu_item.id }}" id="decrement-qty_{{ menu_item.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="20" data-item_id="{{ menu_item.id }}" id="id_qty_{{ menu_item.id }}">
+                                        min="1" max="20" data-item_id="{{ menu_item.id }}"
+                                        id="id_qty_{{ menu_item.id }}">
+                                    <div class="input-group-prepend">
+                                        <button class="increment-qty btn btn-orange text-white rounded-0"
+                                            data-item_id="{{ menu_item.id }}" id="increment-qty_{{ menu_item.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -63,11 +80,12 @@
                                 <i class="fas fa-chevron-left"></i>
                                 <span class="text-uppercase">Add more Food</span>
                             </a>
-                            <button type="submit" class="btn btn-orange text-white shadow border text-uppercase mt-5 p-3"
+                            <button type="submit"
+                                class="btn btn-orange text-white shadow border text-uppercase mt-5 p-3"
                                 value="Add to Cart">Add to Cart<i class="fas fa-chevron-right"></i></button>
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    {% endwith %}
+                        {% endwith %}
                     </div>
                 </form>
             </div>
@@ -77,4 +95,5 @@
 {% endblock content %}
 {% block extra_js %}
 <script src="{% static 'menu/js/food-menu.js' %}"></script>
+<script src="{% static 'menu/js/quantity-input.js' %}"></script>
 {% endblock extra_js %}
