--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -70,7 +70,7 @@
             <div class="col-sm-12 col-md-4 offset-md-4 text-center">
                 <h1 class="headings">FineChop</h1>
                 <h2 class="headings">Order Online</h2>
-                <button class="btn btn-orange w-100">Browse Menu</button>
+                <button class="btn btn-orange rounded-0 text-white w-100">Browse Menu</button>
             </div>
 
         </div>
