--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
                     <p class="m-0 home-top-link"><i class="fa-solid fa-map mx-2"></i> Order A Meal at FineChop</p>
                 </a>
                 <hr class="w-25 mx-auto mt-0 btn-orange">
-                <a href="{% url 'menu' %}" class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"
+                <a href="{% url 'menu' %}" class="mt-3 btn btn-orange rounded-0 shadow text-white mx-auto text-capitalize"
                     aria-label="Click here to go to the main food menu"><i
                         class="fa-solid fa-angles-right mx-2"></i> Order Now</a>
             </div>
@@ -36,7 +36,7 @@
                         FineChop</p>
                 </a>
                 <hr class="w-25 mx-auto mt-0 btn-orange">
-                <a href="{% url 'about' %}" class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
+                <a href="{% url 'about' %}" class="mt-3 btn btn-orange rounded-0 shadow text-white mx-auto text-capitalize"><i
                         class="fa-solid fa-angles-right mx-2" aria-label="Click here to go to the about page"></i>
                         More about us</a>
             </div>
@@ -54,10 +54,10 @@
                 <label for="id_email_field" placeholder="Email" hidden><a class="visually-hidden-focusable"
                         href="#content">Skip to main
                         content</a></label>
-                <input type="email" name="email_field" id="id_email_field" class="w-100 rounded shadow p-1"
+                <input type="email" name="email_field" id="id_email_field" class="w-100 shadow p-1"
                     placeholder=" Enter your email address" required>
                 <button id="id_submit" name="submit" value="Subscribe" type="submit"
-                    class="btn btn-orange p-1 mt-1 shadow text-white">Subscribe</button>
+                    class="btn btn-orange rounded-0 p-1 mt-1 shadow text-white">Subscribe</button>
             </form>
             </div>
         </div>
