--- a/static/css/style.css
+++ b/static/css/style.css
@@ -487,6 +487,10 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.text-orange {
+    color: var(--yellow-orange-color-wheel) !important;
+}
 /* -------------------------------------------------------Media Queries */
 @media only screen and (max-width: 991px) {
     .navbar .nav-link {
