--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -47,7 +47,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-sm btn-orange text-white rounded-0"
+                                            <button class="decrement-qty btn btn-sm btn-orange border text-white rounded-0"
                                                 data-item_id="{{ food.food_id }}"
                                                 id="decrement-qty_{{ food.food_id }}">
                                                 <span>
@@ -60,7 +60,7 @@
                                             data-food_id="{{ food.food_id }}"
                                             id="id_qty_{{ food.food_id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-orange text-white rounded-0"
+                                            <button class="increment-qty btn btn-sm btn-orange border text-white rounded-0"
                                                 data-item_id="{{ food.food_id }}"
                                                 id="increment-qty_{{ food.food_id }}">
                                                 <span>
